--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			}
 			.logo {
 				padding: 10px;
-				width: 120px;
-				height: 120px;
+				width: 100px;
+				height: 100px;
 				-moz-border-radius: 20px;
 				-webkit-border-radius: 20px;
 				border-radius: 20px;
@@ -55,16 +55,18 @@
 			.share .action {
 				margin-left: 1em;
 			}
-			
+			.bottom_footer {  
+
+				padding: 28em .10em;
+				width:100%;
+				text-align: center;
+              }
 			.screenshots {
 				width: 300px;
 				max-width: 100%;
 				margin: 0 auto;
 				position: relative;
 			}
-			
-			
-			
 			.screenshot {
 				position: absolute;
 			}
@@ -76,12 +78,7 @@
 			.screenshot img {
 				width: 70%;
 			}
-			.bottom_footer {  
-                position: fixed; /*or前面的是absolute就可以用*/  
-                bottom: 30px;  
-                text-align: center;
-                width: 100%;
-              }
+		
 			.icons {
 				z-index: -1;
 				position: absolute;
@@ -231,10 +228,13 @@
 				class="icon"></div>
 			<div id="iosWeiboTip" class="ios-weibo-tip"><img src="./Convenient-HTML_files/weibo@2x.png" class="ios-weibo-tip-img"></div>
 			<!-- Footer -->
-			<article class="bottom_footer"
+		 
+			 <article class="bottom_footer"
 				<div><li>周周© 2015 xzzai.com 京ICP备15066712号  版权所有：周周</li></div>	
 		   </article>
+
 		</div>
+		
 		<script async="" src="./Convenient-HTML_files/analytics.js"></script>
 		<script>
 			var ua = navigator.userAgent
