优化加底部

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
 			.share .action {
 				margin-left: 1em;
 			}
-			.bottom_footer {  
-
-				padding: 28em .10em;
+		   .bottom_footer {  
+				padding: 30em .10em;
 				width:100%;
 				text-align: center;
+				font-size: .9em;
+				height: 100%;
+				color: 	#666666;
               }
 			.screenshots {
 				width: 300px;
@@ -230,7 +232,7 @@
 			<!-- Footer -->
 		 
 			 <article class="bottom_footer"
-				<div><li>周周© 2015 xzzai.com 京ICP备15066712号  版权所有：周周</li></div>	
+				<div><li>周周© 2016 www.xzzai.com 京ICP备15066712号  版权所有：周周</li></div>	
 		   </article>
 
 		</div>
