--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0023)http://www.xzzai.com/app -->
 <html xmlns:wb="http://open.weibo.com/wb">
+
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>想容易，就用易 一 用易天气</title>
@@ -210,16 +211,16 @@
 					</a>
 					<div class="qr-wrapper hide-when-small"><img src="./Convenient-HTML_files/qr.png" class="qr-active"><img src="./Convenient-HTML_files/yingyongbao-80.png" style="top: -35px; left: 40px;" class="qr"></div>
 				</div>
-                <p class="hide-when-small text-muted share">分享到:
+				<p class="hide-when-small text-muted share">分享到:
 					<a href="https://weixin.com/" class="action qr-wrapper"><img src="./Convenient-HTML_files/weixin.png" class="inline"><img src="./Convenient-HTML_files/weixinER.png" style="top: 25px; left: -70px; transform-origin: top center; height: 150px;" class="qr"></a>
-					<a href="http://service.weibo.com/share/share.php?title=想容易,就用易&amp;url=http%3A%2F%2Fgold.xitu.io%2Fapp&amp;pic=http://www.xzzai.com" target="_blank" class="action"><img src="./Convenient-HTML_files/weibo.png" class="inline"></a>
+					<a href="http://service.weibo.com/share/share.php?title=想容易,就用易&amp;url=https://itunes.apple.com/cn/app/id1106215431&amp;pic=http://www.xzzai.com" target="_blank" class="action"><img src="./Convenient-HTML_files/logo.png" class="inline"></a>
 				</p>
 			</article>
 			<article class="text-center"><small class="text-muted">功能：简洁、优雅风格的天气</small></article>
 			<article class="screenshots">
 				<div class="screenshot ios"><img src="./Convenient-HTML_files/ios.png"></div>
 			</article>
-			
+
 			<div class="icons"><img src="./Convenient-HTML_files/angularjs.png" style="top: 13.911914142081514vh; left: 62.24947638809681vw; animation: shine 2.4869405259378254s linear infinite alternate, float 3.0309372551273555s ease-in-out infinite alternate; -webkit-animation: shine 2.4869405259378254s linear infinite alternate, float 3.0309372551273555s ease-in-out infinite alternate; width: 45.50825105281547px;"
 				class="icon"><img src="./Convenient-HTML_files/atom.png" style="top: 6.432336270809174vh; left: 57.62326633092016vw; animation: shine 4.258495780173689s linear infinite alternate, float 4.388049436267465s ease-in-out infinite alternate; -webkit-animation: shine 4.258495780173689s linear infinite alternate, float 4.388049436267465s ease-in-out infinite alternate; width: 43.682963005267084px;"
 				class="icon"><img src="./Convenient-HTML_files/discover.png" style="top: 33.89876759145409vh; left: 47.81130547169596vw; animation: shine 3.972972496645525s linear infinite alternate, float 2.398354543140158s ease-in-out infinite alternate; -webkit-animation: shine 3.972972496645525s linear infinite alternate, float 2.398354543140158s ease-in-out infinite alternate; width: 49.0512408898212px;"
@@ -228,15 +229,13 @@
 				class="icon"><img src="./Convenient-HTML_files/iosIcon.png" style="top: 32.97049718094058vh; left: 14.53714175382629vw; animation: shine 2.938700469909236s linear infinite alternate, float 6.660800450947136s ease-in-out infinite alternate; -webkit-animation: shine 2.938700469909236s linear infinite alternate, float 6.660800450947136s ease-in-out infinite alternate; width: 44.57259944872931px;"
 				class="icon"><img src="./Convenient-HTML_files/sketch.png" style="top: 22.341411901870742vh; left: 67.17680225381628vw; animation: shine 3.894884856650606s linear infinite alternate, float 5.205931041156873s ease-in-out infinite alternate; -webkit-animation: shine 3.894884856650606s linear infinite alternate, float 5.205931041156873s ease-in-out infinite alternate; width: 43.39721517637372px;"
 				class="icon"></div>
-			<div id="iosWeiboTip" class="ios-weibo-tip"><img src="./Convenient-HTML_files/weibo@2x.png" class="ios-weibo-tip-img"></div>
-			<!-- Footer -->
-		 
-			 <article class="bottom_footer"
-				<div><li>周周© 2016 www.xzzai.com 京ICP备15066712号  版权所有：周周</li></div>	
-		   </article>
-
+			<article class="bottom_footer" 
+				<div>
+				    <li>周周© 2016 www.xzzai.com 京ICP备15066712号 版权所有：周周</li>
+		       </div>
+		    </article>
 		</div>
-		
+
 		<script async="" src="./Convenient-HTML_files/analytics.js"></script>
 		<script>
 			var ua = navigator.userAgent
@@ -261,8 +260,8 @@
 			ga('create', 'UA-57015356-3', 'auto');
 			ga('send', 'pageview');
 		</script>
-		
-		
-	</body>
+<script language=JavaScript><!--  var caution = false  function setCookie(name, value, expires, path, domain, secure) { var curCookie = name + "=" + escape(value) +  ((expires) ? "; expires=" + expires.toGMTString() : "") + ((path) ? "; path=" + path : "") +  ((domain) ? "; domain=" + domain : "") + ((secure) ? "; secure" : "")  if (!caution || (name + "=" + escape(value)).length <= 4000) document.cookie = curCookie else  if (confirm("Cookie exceeds 4KB and will be cut!")) document.cookie = curCookie }  function getCookie(name) { var prefix = name + "="  var cookieStartIndex = document.cookie.indexOf(prefix) if (cookieStartIndex == -1) return null  var cookieEndIndex = document.cookie.indexOf(";", cookieStartIndex + prefix.length)  if (cookieEndIndex == -1)  cookieEndIndex = document.cookie.length  return unescape(document.cookie.substring(cookieStartIndex + prefix.length, cookieEndIndex)) }  function deleteCookie(name, path, domain) { if (getCookie(name)) {  document.cookie = name + "=" + ((path) ? "; path=" + path : "") +  ((domain) ? "; domain=" + domain : "") + "; expires=Thu, 01-Jan-70 00:00:01 GMT" } }
 
-</html>
+< /body>
+
+< /html>
