--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 					<a href="http://www.xzzai.com" class="text-blue">用易</a></div>
 				<div class="description text-muted">想容易,就用易</div>
 				<div class="download">
-					<a href="http://www.xzzai.com">
+					<a href="https://itunes.apple.com/app/id1106215431">
 						<button class="hero-button">下载<strong>v1.0.0</strong></button>
 					</a>
 					<div class="qr-wrapper hide-when-small"><img src="./Convenient-HTML_files/qr.png" class="qr-active"><img src="./Convenient-HTML_files/yingyongbao-80.png" style="top: -35px; left: 40px;" class="qr"></div>
